# adapta-chat

./: .env.example  .gitignore  GEMINI.md  README.md  dateTime.md  problema-credito.md  prompt-configuration.md  pyproject.toml  requirements.txt  test_adapta_generators.py
docs/: architecture.md  requirements.md
src/: __init__.py  app_chat.py  app_debate.py  config.py
src/generators/: __init__.py  base.py
src/generators/adapta/: __init__.py  claude_generator.py  claude_opus_generator.py  client.py  deepseek_generator.py  deepseek_r1_generator.py  gemini_generator.py  gpt_generator.py  gpt_o3_generator.py  gpt_o4_mini_generator.py  gpt_oss_generator.py  grok_4_generator.py
src/prompts/agentes/: Agent_1.txt  Agent_2.txt  Agent_3.txt  models.json
src/utils/: logger.py  text_cleaner.py
